--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Guia do Aventureiro</title>
+
+    <meta name="og:url" content="<%= BASE_URL %>" />
+    <meta name="og:title" content="Guia do Aventureiro" />
+    <meta name="og:description" content="O Guia do Aventureiro foi criado por fãs e reune informações, ferramentas e guias para os jogadores durante sua aventura no MMO Wakfu." />
+    <meta name="og:image" content="https://guiawakfu.netlify.app/img/socialtag.png" />
+    <meta name="og:type" content="website" />
+    <meta name="fb:app_id" content="623841242213487" />
+
+    <meta name="twitter:title" content="Guia do Aventureiro" />
+    <meta name="twitter:description" content="O Guia do Aventureiro foi criado por fãs e reune informações, ferramentas e guias para os jogadores durante sua aventura no MMO Wakfu." />
+    <meta name="twitter:image" content="https://guiawakfu.netlify.app/img/socialtag.png" />
+    <meta name="twitter:card" content="summary" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comforter&family=Manrope:wght@100;300;400;500;700;900&display=swap">
