--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,20 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Guia do Aventureiro</title>
 
-    <meta name="og:url" content="<%= BASE_URL %>" />
-    <meta name="og:title" content="Guia do Aventureiro" />
-    <meta name="og:description" content="O Guia do Aventureiro foi criado por fãs e reune informações, ferramentas e guias para os jogadores durante sua aventura no MMO Wakfu." />
-    <meta name="og:image" content="https://guiawakfu.netlify.app/img/socialtag.png" />
-    <meta name="og:type" content="website" />
-    <meta name="fb:app_id" content="623841242213487" />
+    <meta property="og:url" content="<%= BASE_URL %>" />
+    <meta property="og:title" content="Guia do Aventureiro" />
+    <meta property="og:description" content="O Guia do Aventureiro foi criado por fãs e reune informações, ferramentas e guias para os jogadores durante sua aventura no MMO Wakfu." />
+    <meta property="og:image" content="https://guiawakfu.netlify.app/img/socialtag.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="418" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="623841242213487" />
 
-    <meta name="twitter:title" content="Guia do Aventureiro" />
-    <meta name="twitter:description" content="O Guia do Aventureiro foi criado por fãs e reune informações, ferramentas e guias para os jogadores durante sua aventura no MMO Wakfu." />
-    <meta name="twitter:image" content="https://guiawakfu.netlify.app/img/socialtag.png" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="twitter:title" content="Guia do Aventureiro" />
+    <meta property="twitter:description" content="O Guia do Aventureiro foi criado por fãs e reune informações, ferramentas e guias para os jogadores durante sua aventura no MMO Wakfu." />
+    <meta property="twitter:image" content="https://guiawakfu.netlify.app/img/socialtag.png" />
+    <meta property="twitter:card" content="summary" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
